--- a/jabrss.service
+++ b/jabrss.service
@@ -10,6 +10,10 @@ ExecStart=etc/jabrss.sh
 WorkingDirectory=/home/jabrss/jabrss
 Restart=always
 RestartSec=5s
+StandardInput=tty
+TTYPath=/dev/tty10
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
